Fixed issue with LoadingSpinner timing out too soon. Added min-height styles to prevent footer jumping around. Improved UseOurApi.js to ensure loading is set after fetchedData.

--- a/src/NewAlbums.Web/ClientApp/src/components/spotify/SubscribeForm.scss
+++ b/src/NewAlbums.Web/ClientApp/src/components/spotify/SubscribeForm.scss
@@ -2,4 +2,6 @@
 
 .subscribe-form-container {
     margin-top: 100px;
+    //Prevents the footer jumping around when we display the loading spinner and success/error messages
+    min-height: 300px;
 }
